# anamnesis

./: .env.example  .gitignore  ANAMNESIS-BUILD-SPEC.md  ANAMNESIS-HARDENING-SPEC.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  SCHEMA.md  docker-compose.yml  pyproject.toml  requirements.txt
anamnesis/: __init__.py  __main__.py  cli.py  config.py  db.py  embedder.py  llm.py  models.py
anamnesis/api/: __init__.py  app.py  auth.py  routes.py
anamnesis/cli/: __main__.py  export_import.py  generate_boot.py  main.py
anamnesis/mcp/: __init__.py  server.py
anamnesis/operations/: __init__.py  decay_check.py  prune.py  recall.py  reflect.py  retain.py  reweight.py
anamnesis/sdk/: __init__.py  client.py
examples/: quickstart.py
tests/: test_scoring.py
